Fix nav menu z-index

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -220,7 +220,7 @@ nav {
   display: flex;
   align-items: flex-start;
   top: 50vw;
-  z-index: 5;
+  z-index: 1000;
   width: 100%;
   @media only screen and (min-width: 1020px){
     position: unset;
